--- a/scss/_interface.scss
+++ b/scss/_interface.scss
@@ -19,7 +19,63 @@ main > aside {
 
     div.score {
       font-size: 0.75rem;
-      margin-left: 0.25rem
+      margin-left: 0.25rem;
+    }
+  }
+}
+
+body > aside {
+  height: calc(var(--width-board) + 8rem);
+  width: calc(var(--width-board) / 2);
+  background-color: #222;
+  padding: 1rem 0;
+
+  & > div.moveList {
+    counter-reset: moveCount;
+
+    & > div.turn {
+      counter-increment: moveCount;
+      padding: 0.25rem 1rem;
+      font-size: 14px;
+      font-weight: 600;
+      display: flex;
+
+      & > span {
+        display: inline-flex;
+        padding: 0.75rem 1rem;
+        transition: 200ms;
+        border-bottom: 4px solid #222;
+        cursor: pointer;
+
+        &:hover {
+          background-color: #555;
+          border-bottom: 4px solid #666;
+        }
+      }
+
+      & > span:nth-of-type(2) {
+        margin-left: 3rem;
+      }
+
+      &:before {
+        content: counter(moveCount) ".";
+        color: #ffffff75;
+        margin-right: 1.25rem;
+        width: 1rem;
+        padding: 0.75rem 0;
+      }
+
+      &:nth-child(even) {
+        background-color: #333;
+        
+        span {
+          border-bottom: 4px solid #333;
+
+          &:hover {
+            border-bottom: 4px solid #666;
+          }
+        }
+      }
     }
   }
 }
