--- a/css/style.css
+++ b/css/style.css
@@ -32,9 +32,16 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   gap: 1rem;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
   max-width: 976px;
   margin: auto;
+}
+
+body.reversed main {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
 }
 
 body main {
@@ -54,6 +61,13 @@ body main {
   gap: 1rem;
 }
 
+button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+}
+
 article#chessboard {
   width: var(--width-board);
   aspect-ratio: 1/1;
@@ -62,6 +76,14 @@ article#chessboard {
   background-repeat: repeat;
   background-size: var(--width-4x4) var(--width-4x4);
   background-position: top left;
+}
+
+article#chessboard.reversed {
+  rotate: 0.5turn;
+}
+
+article#chessboard.reversed > * {
+  rotate: 0.5turn;
 }
 
 article#chessboard > * {
@@ -189,7 +211,7 @@ main > aside > div:first-of-type img {
 
 main > aside > div:first-of-type div.score {
   font-size: 0.75rem;
-  margin-left: 0.25rem;
+  margin-left: 0.5rem;
 }
 
 body > aside {
@@ -197,13 +219,41 @@ body > aside {
   width: calc(var(--width-board) / 2);
   background-color: #222;
   padding: 1rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-body > aside > div.moveList {
+body > aside > div.move-list {
   counter-reset: moveCount;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  overflow-y: scroll;
+  margin-right: 0.375rem;
 }
 
-body > aside > div.moveList > div.turn {
+body > aside > div.move-list::-webkit-scrollbar {
+  width: 0.625rem;
+  padding: 0.5rem;
+}
+
+body > aside > div.move-list::-webkit-scrollbar-thumb {
+  background-color: grey;
+  border-radius: 8px;
+  padding: 0.5rem;
+}
+
+body > aside > div.move-list::-webkit-scrollbar-track {
+  background-color: #222;
+  padding: 0.5rem;
+}
+
+body > aside > div.move-list > div.turn {
   counter-increment: moveCount;
   padding: 0.25rem 1rem;
   font-size: 14px;
@@ -211,45 +261,54 @@ body > aside > div.moveList > div.turn {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-right: 0.375rem;
 }
 
-body > aside > div.moveList > div.turn > span {
+body > aside > div.move-list > div.turn > span {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
+  width: 4rem;
   padding: 0.75rem 1rem;
-  -webkit-transition: 200ms;
-  transition: 200ms;
-  border-bottom: 4px solid #222;
-  cursor: pointer;
 }
 
-body > aside > div.moveList > div.turn > span:hover {
-  background-color: #555;
-  border-bottom: 4px solid #666;
+body > aside > div.move-list > div.turn > span:nth-of-type(2) {
+  margin-left: 2.5rem;
 }
 
-body > aside > div.moveList > div.turn > span:nth-of-type(2) {
-  margin-left: 3rem;
-}
-
-body > aside > div.moveList > div.turn:before {
+body > aside > div.move-list > div.turn:before {
   content: counter(moveCount) ".";
   color: #ffffff75;
   margin-right: 1.25rem;
-  width: 1rem;
+  width: 1.5rem;
   padding: 0.75rem 0;
 }
 
-body > aside > div.moveList > div.turn:nth-child(even) {
+body > aside > div.move-list > div.turn:nth-child(even) {
   background-color: #333;
 }
 
-body > aside > div.moveList > div.turn:nth-child(even) span {
-  border-bottom: 4px solid #333;
+body > aside > div.controls {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1rem;
+  padding: 0 1rem;
 }
 
-body > aside > div.moveList > div.turn:nth-child(even) span:hover {
-  border-bottom: 4px solid #666;
+body > aside > div.controls > * {
+  width: 100%;
+  padding: 0.75rem;
+  background-color: #333;
+  -webkit-transition: 300ms;
+  transition: 300ms;
+  font-weight: 600;
+  color: #fff;
+  font-size: 14px;
+  margin-top: 1rem;
+}
+
+body > aside > div.controls > *:hover {
+  background-color: #444;
 }
 /*# sourceMappingURL=style.css.map */
