--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,11 +26,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   gap: 1rem;
   font-family: "Roboto", Arial, Helvetica, sans-serif;
   max-width: 976px;
@@ -40,8 +40,8 @@ body {
 body.reversed main {
   -webkit-box-orient: vertical;
   -webkit-box-direction: reverse;
-      -ms-flex-direction: column-reverse;
-          flex-direction: column-reverse;
+  -ms-flex-direction: column-reverse;
+  flex-direction: column-reverse;
 }
 
 body main {
@@ -50,14 +50,14 @@ body main {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   gap: 1rem;
 }
 
@@ -72,7 +72,12 @@ article#chessboard {
   width: var(--width-board);
   aspect-ratio: 1/1;
   position: relative;
-  background: conic-gradient(var(--tile-dark) 90deg, var(--tile-light) 90deg 180deg, var(--tile-dark) 180deg 270deg, var(--tile-light) 270deg);
+  background: conic-gradient(
+    var(--tile-dark) 90deg,
+    var(--tile-light) 90deg 180deg,
+    var(--tile-dark) 180deg 270deg,
+    var(--tile-light) 270deg
+  );
   background-repeat: repeat;
   background-size: var(--width-4x4) var(--width-4x4);
   background-position: top left;
@@ -158,8 +163,12 @@ article#chessboard > *[data-col="7"] {
 }
 
 article#chessboard > img {
-  -webkit-transition: left 300ms ease, bottom 300ms ease;
-  transition: left 300ms ease, bottom 300ms ease;
+  -webkit-transition:
+    left 300ms ease,
+    bottom 300ms ease;
+  transition:
+    left 300ms ease,
+    bottom 300ms ease;
 }
 
 article#chessboard > div {
@@ -183,11 +192,11 @@ main > aside {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   width: var(--width-board);
   padding: 0 2rem 0 1.5rem;
   height: 3rem;
@@ -200,8 +209,8 @@ main > aside > div:first-of-type {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 main > aside > div:first-of-type img {
@@ -224,15 +233,15 @@ body > aside {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 body > aside > div.move-list {
   counter-reset: moveCount;
   -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
   overflow-y: scroll;
   margin-right: 0.375rem;
 }
