--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,6 +83,157 @@ article#chessboard {
   background-position: top left;
 }
 
+article#chessboard > div.popup-modal {
+  position: absolute;
+  width: calc(var(--width-tile) * 3);
+  aspect-ratio: 1/1;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  background-color: #222;
+  border-radius: 1rem;
+  font-weight: 600;
+  font-size: 1.5rem;
+  z-index: 1000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  padding: 1.5rem 1rem;
+}
+
+article#chessboard > div.popup-modal button {
+  width: 100%;
+  padding: 1rem;
+  background-color: #8156ff;
+  border-radius: 0.25rem;
+  -webkit-transition: 300ms;
+  transition: 300ms;
+  font-weight: 600;
+  font-size: 1rem;
+  color: #fff;
+  margin-top: 1rem;
+}
+
+article#chessboard > div.popup-modal button:hover {
+  background-color: #764bf5;
+}
+
+article#chessboard > div.popup-modal span {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  font-size: 1rem;
+  text-transform: lowercase;
+  color: #ffffff75;
+}
+
+article#chessboard div.numbers {
+  width: var(--width-board);
+  aspect-ratio: 1/1;
+  position: relative;
+  pointer-events: none;
+}
+
+article#chessboard div.numbers > span {
+  position: absolute;
+  padding: 0.25rem;
+  width: var(--width-tile);
+  aspect-ratio: 1/1;
+  color: var(--tile-light);
+  pointer-events: none;
+}
+
+article#chessboard div.numbers > span[data-row="0"] {
+  bottom: 0px;
+}
+
+article#chessboard div.numbers > span[data-col="0"] {
+  left: 0px;
+}
+
+article#chessboard div.numbers > span[data-row="1"] {
+  bottom: 80px;
+}
+
+article#chessboard div.numbers > span[data-col="1"] {
+  left: 80px;
+}
+
+article#chessboard div.numbers > span[data-row="2"] {
+  bottom: 160px;
+}
+
+article#chessboard div.numbers > span[data-col="2"] {
+  left: 160px;
+}
+
+article#chessboard div.numbers > span[data-row="3"] {
+  bottom: 240px;
+}
+
+article#chessboard div.numbers > span[data-col="3"] {
+  left: 240px;
+}
+
+article#chessboard div.numbers > span[data-row="4"] {
+  bottom: 320px;
+}
+
+article#chessboard div.numbers > span[data-col="4"] {
+  left: 320px;
+}
+
+article#chessboard div.numbers > span[data-row="5"] {
+  bottom: 400px;
+}
+
+article#chessboard div.numbers > span[data-col="5"] {
+  left: 400px;
+}
+
+article#chessboard div.numbers > span[data-row="6"] {
+  bottom: 480px;
+}
+
+article#chessboard div.numbers > span[data-col="6"] {
+  left: 480px;
+}
+
+article#chessboard div.numbers > span[data-row="7"] {
+  bottom: 560px;
+}
+
+article#chessboard div.numbers > span[data-col="7"] {
+  left: 560px;
+}
+
+article#chessboard div.numbers > span:nth-of-type(even) {
+  color: var(--tile-dark);
+}
+
+article#chessboard div.numbers > span.letter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+  -ms-flex-align: end;
+  align-items: flex-end;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+}
+
 article#chessboard.reversed {
   rotate: 0.5turn;
 }
@@ -91,74 +242,74 @@ article#chessboard.reversed > * {
   rotate: 0.5turn;
 }
 
-article#chessboard > * {
+article#chessboard > *:not(div.popup-modal):not(div.numbers) {
   position: absolute;
   width: var(--width-tile);
   aspect-ratio: 1/1;
   cursor: pointer;
 }
 
-article#chessboard > *[data-row="0"] {
+article#chessboard > *:not(div.popup-modal):not(div.numbers)[data-row="0"] {
   bottom: 0px;
 }
 
-article#chessboard > *[data-col="0"] {
+article#chessboard > *:not(div.popup-modal):not(div.numbers)[data-col="0"] {
   left: 0px;
 }
 
-article#chessboard > *[data-row="1"] {
+article#chessboard > *:not(div.popup-modal):not(div.numbers)[data-row="1"] {
   bottom: 80px;
 }
 
-article#chessboard > *[data-col="1"] {
+article#chessboard > *:not(div.popup-modal):not(div.numbers)[data-col="1"] {
   left: 80px;
 }
 
-article#chessboard > *[data-row="2"] {
+article#chessboard > *:not(div.popup-modal):not(div.numbers)[data-row="2"] {
   bottom: 160px;
 }
 
-article#chessboard > *[data-col="2"] {
+article#chessboard > *:not(div.popup-modal):not(div.numbers)[data-col="2"] {
   left: 160px;
 }
 
-article#chessboard > *[data-row="3"] {
+article#chessboard > *:not(div.popup-modal):not(div.numbers)[data-row="3"] {
   bottom: 240px;
 }
 
-article#chessboard > *[data-col="3"] {
+article#chessboard > *:not(div.popup-modal):not(div.numbers)[data-col="3"] {
   left: 240px;
 }
 
-article#chessboard > *[data-row="4"] {
+article#chessboard > *:not(div.popup-modal):not(div.numbers)[data-row="4"] {
   bottom: 320px;
 }
 
-article#chessboard > *[data-col="4"] {
+article#chessboard > *:not(div.popup-modal):not(div.numbers)[data-col="4"] {
   left: 320px;
 }
 
-article#chessboard > *[data-row="5"] {
+article#chessboard > *:not(div.popup-modal):not(div.numbers)[data-row="5"] {
   bottom: 400px;
 }
 
-article#chessboard > *[data-col="5"] {
+article#chessboard > *:not(div.popup-modal):not(div.numbers)[data-col="5"] {
   left: 400px;
 }
 
-article#chessboard > *[data-row="6"] {
+article#chessboard > *:not(div.popup-modal):not(div.numbers)[data-row="6"] {
   bottom: 480px;
 }
 
-article#chessboard > *[data-col="6"] {
+article#chessboard > *:not(div.popup-modal):not(div.numbers)[data-col="6"] {
   left: 480px;
 }
 
-article#chessboard > *[data-row="7"] {
+article#chessboard > *:not(div.popup-modal):not(div.numbers)[data-row="7"] {
   bottom: 560px;
 }
 
-article#chessboard > *[data-col="7"] {
+article#chessboard > *:not(div.popup-modal):not(div.numbers)[data-col="7"] {
   left: 560px;
 }
 
