Test Cases v1 & small refactors

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -238,6 +238,11 @@ article#chessboard.reversed {
   rotate: 0.5turn;
 }
 
+article#chessboard.reversed > div.popup-modal {
+  -webkit-transform: translate(50%, 50%);
+  transform: translate(50%, 50%);
+}
+
 article#chessboard.reversed > * {
   rotate: 0.5turn;
 }
