--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,11 +26,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 1rem;
   font-family: "Roboto", Arial, Helvetica, sans-serif;
   max-width: 976px;
@@ -40,8 +40,8 @@ body {
 body.reversed main {
   -webkit-box-orient: vertical;
   -webkit-box-direction: reverse;
-  -ms-flex-direction: column-reverse;
-  flex-direction: column-reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
 }
 
 body main {
@@ -50,14 +50,14 @@ body main {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 1rem;
 }
 
@@ -72,15 +72,20 @@ article#chessboard {
   width: var(--width-board);
   aspect-ratio: 1/1;
   position: relative;
-  background: conic-gradient(
-    var(--tile-dark) 90deg,
-    var(--tile-light) 90deg 180deg,
-    var(--tile-dark) 180deg 270deg,
-    var(--tile-light) 270deg
-  );
+  overflow: hidden;
+  background: conic-gradient(var(--tile-dark) 90deg, var(--tile-light) 90deg 180deg, var(--tile-dark) 180deg 270deg, var(--tile-light) 270deg);
   background-repeat: repeat;
   background-size: var(--width-4x4) var(--width-4x4);
   background-position: top left;
+}
+
+article#chessboard > div.last-attack-from,
+article#chessboard > div.last-attack-to {
+  cursor: default !important;
+  bottom: 100%;
+  left: 100%;
+  background-color: #d7b70175;
+  z-index: 0;
 }
 
 article#chessboard > div.popup-modal {
@@ -90,7 +95,7 @@ article#chessboard > div.popup-modal {
   left: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   background-color: #222;
   border-radius: 1rem;
   font-weight: 600;
@@ -101,14 +106,14 @@ article#chessboard > div.popup-modal {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding: 1.5rem 1rem;
 }
 
@@ -227,11 +232,11 @@ article#chessboard div.numbers > span.letter {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: end;
-  -ms-flex-align: end;
-  align-items: flex-end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 article#chessboard.reversed {
@@ -240,7 +245,7 @@ article#chessboard.reversed {
 
 article#chessboard.reversed > div.popup-modal {
   -webkit-transform: translate(50%, 50%);
-  transform: translate(50%, 50%);
+          transform: translate(50%, 50%);
 }
 
 article#chessboard.reversed > div.numbers > span {
@@ -455,12 +460,8 @@ article#chessboard > *:not(div.popup-modal):not(div.numbers)[data-col="7"] {
 }
 
 article#chessboard > img {
-  -webkit-transition:
-    left 300ms ease,
-    bottom 300ms ease;
-  transition:
-    left 300ms ease,
-    bottom 300ms ease;
+  -webkit-transition: left 300ms ease, bottom 300ms ease;
+  transition: left 300ms ease, bottom 300ms ease;
 }
 
 article#chessboard > div {
@@ -484,11 +485,11 @@ main > aside {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: var(--width-board);
   padding: 0 2rem 0 1.5rem;
   height: 3rem;
@@ -501,8 +502,8 @@ main > aside > div:first-of-type {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 main > aside > div:first-of-type img {
@@ -515,6 +516,11 @@ main > aside > div:first-of-type div.score {
   margin-left: 0.5rem;
 }
 
+main > aside > div:nth-of-type(2) {
+  font-size: 1.25rem;
+  font-weight: 300;
+}
+
 body > aside {
   height: calc(var(--width-board) + 8rem);
   width: calc(var(--width-board) / 2);
@@ -525,15 +531,15 @@ body > aside {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 body > aside > div.move-list {
   counter-reset: moveCount;
   -webkit-box-flex: 1;
-  -ms-flex-positive: 1;
-  flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   overflow-y: scroll;
   margin-right: 0.375rem;
 }
